testing/tests/ui/macro_named_argument.stderr
error: the previous template error derives from
 --> tests/ui/macro_named_argument.rs:4:12
  |
4 | #[template(source = "{%- macro thrice(param1, param2) -%}
  |            ^^^^^^

error: the previous template error derives from
  --> tests/ui/macro_named_argument.rs:12:12
   |
12 | #[template(source = "{%- macro thrice(param1, param2) -%}
   |            ^^^^^^

error: the previous template error derives from
  --> tests/ui/macro_named_argument.rs:21:12
   |
21 | #[template(source = "{%- macro thrice(param1, param2) -%}
   |            ^^^^^^

error: the previous template error derives from
  --> tests/ui/macro_named_argument.rs:30:12
   |
30 | #[template(source = "{%- macro thrice(param1, param2) -%}
   |            ^^^^^^

error: the previous template error derives from
  --> tests/ui/macro_named_argument.rs:38:12
   |
38 | #[template(source = "{%- macro thrice(param1, param2) -%}
   |            ^^^^^^
